# road-to-ml-engineer

./: .gitignore  .gitpod.yml  README.md  pyproject.toml
coursera/: course.md
coursera/advanced_tensorflow/: README.md
coursera/advanced_tensorflow/week1/: functional_apis.ipynb  multi_output.ipynb  siamese_network.ipynb
coursera/course1-intro_to_tensorflow/: course.md
coursera/course1-intro_to_tensorflow/week4/: human_horse_classification.ipynb
coursera/course2-convnets_in_tensorflow/: course.md
coursera/course2-convnets_in_tensorflow/week1/: cats_vs_dogs.ipynb
coursera/course2-convnets_in_tensorflow/week3/: cats_dogs_transfer_learning.ipynb  horses_humans_transfer_learning.ipynb
coursera/course2-convnets_in_tensorflow/week4/: hand_signs.ipynb  rps.ipynb  sign_language_mnist.ipynb
coursera/course3-nlp_with_tensorflow/: course.md
coursera/course3-nlp_with_tensorflow/week1/: sarcasm_detection.ipynb
coursera/course3-nlp_with_tensorflow/week2/: challenge_bbc_news.ipynb  imdb_sentiment.ipynb  sarcasm.ipynb
coursera/course3-nlp_with_tensorflow/week3/: convnet_with_embedding.ipynb  imdb_with_gru.ipynb
coursera/course3-nlp_with_tensorflow/week4/: shakespeare_exercise.ipynb
coursera/course4-sequences_and_time_series/: README.md  forecasting_exercise.ipynb  forecasting_with_dnn.ipynb  single_layer_forecasting.ipynb
coursera/week1/: hello_world.ipynb  house_prices.ipynb
coursera/week2/: fashion_mnist.ipynb  handwritten_numbers.ipynb
coursera/week3/: convnet_mnist.ipynb
py_torch/: mnist_classifier.py
scripts/: setup_gitpod.sh
(+12 files in other folders)
