[tool.poetry]
name = "road-to-ml-engineer"
version = "0.1.0"
description = ""
authors = ["Carlos Kidman"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.3.1"
ipykernel = "^5.3.4"
matplotlib = "^3.3.3"
tensorflow-datasets = "^4.1.0"
scipy = "^1.5.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.4"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
